--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <script type="module" src="./js/classes/loops.class.js"></script>
-    <script type="module" src="./js/linting.js"></script>
+    <script type="module" src="./js/number-of-occurrences.js"></script>
 </head>
 <body>
     
