--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 
     <script type="module" src="./js/classes/loops.class.js"></script>
+    <script type="module" src="./js/classes/strings.util.js"></script>
     <script type="module" src="./js/find-longest-palindrome.js"></script>
 </head>
 <body>
