--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type="module" src="./js/classes/loops.class.js"></script>
     <script type="module" src="./js/classes/strings.util.js"></script>
-    <script type="module" src="./js/anagrams.js"></script>
+    <script type="module" src="./js/lint-balanced-brackets.js"></script>
 </head>
 <body>
     
