update to some of the exercises

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type="module" src="./js/classes/loops.class.js"></script>
     <script type="module" src="./js/classes/strings.util.js"></script>
-    <script type="module" src="./js/armstrong-numbers.js"></script>
+    <script type="module" src="./js/find-longest-palindrome.js"></script>
 </head>
 <body>
     
