--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <script type="module" src="./js/classes/loops.class.js"></script>
     <script type="module" src="./js/classes/strings.util.js"></script>
-    <script type="module" src="./js/find-longest-palindrome.js"></script>
+    <script type="module" src="./js/apple-test.js"></script>
 </head>
 <body>
-    
+    <div id="main"></div>
 </body>
 </html>
 
