array sorting and concat

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type="module" src="./js/classes/loops.class.js"></script>
     <script type="module" src="./js/classes/strings.util.js"></script>
-    <script type="module" src="./js/apple-test.js"></script>
+    <script type="module" src="./js/arrays/sort.js"></script>
 </head>
 <body>
     <div id="main"></div>
