--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <script type="module" src="./js/classes/loops.class.js"></script>
     <script type="module" src="./js/classes/strings.util.js"></script>
-    <script type="module" src="./js/promise-observable/promise-real-world-example.js"></script>
+    <script type="module" src="./js/ceasar-cipher.js"></script>
 </head>
 <body>
     <div id="main"></div>
